apps/base/organisers/prowlarr/ingressroute-tls.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr-tls
spec:
  entryPoints:
    - websecure
  routes: # TODO Set api with no auth
    - kind: Rule
      match: Host(`prowlarr.${CLUSTER_DOMAIN}`)
      services:
        - name: prowlarr
          port: 9686
      middlewares:
        - name: traefik-secure-headers
          namespace: kube-system
        - name: traefik-forward-auth
          namespace: kube-system
    # - kind: Rule
    #   match: Host(`prowlarr.${CLUSTER_DOMAIN}`)  && PathPrefix(`/api`)
    #   services:
    #     - name: prowlarr
    #       port: 9686
    #   middlewares:
    #     - name: traefik-secure-headers
    #       namespace: kube-system
  tls:
    certResolver: cloudflare
